--- a/css/carousel-styles.css
+++ b/css/carousel-styles.css
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: opacity 0.8s ease-in-out;
+    transition: opacity 1.25s cubic-bezier(0.22, 0.89, 0.32, 0.54);;
 }
 
 .carousel-slide.active {
@@ -67,14 +67,30 @@
     font-size: 24px;
     /* cursor: pointer; */
     cursor: grab;
-
-    transition: transform 0.45s ease-in-out;
+    transition: background-color 0.35s ease-in-out;
+    /* transition: transform 0.45s ease-in-out; */
 }
 
 .carousel-nav .arrow:hover {
     background-color: #4a4a4a;
-    transition: background-color 0.35s ease-in;
+    /* transition: background-color 0.35s ease-in; */
+    /* transform: translateY(-10px); */
+}
 
+.carousel-nav .prev {
+    margin-left: 20px;
+    transition: transform 0.45s ease-in-out;
+}
 
-    transform: translateY(-10px);
+.carousel-nav .next {
+    margin-right: 20px;
+    transition: transform 0.45s ease-in-out;
+}
+
+.carousel-nav .prev:hover {
+    transform: translateX(-10px);
+}
+
+.carousel-nav .next:hover {
+    transform: translateX(10px);
 }
