--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -1,21 +1,37 @@
 :root {
-    --color-navbar: hsl(0, 0%, 100%);
-    --color-footer: hsl(0, 0%, 100%);
-    --color-bg: hsl(0, 0%, 100%);
-    --color-sectionA: white;
-    --color-sectionB: white;
-    
-
+    --color-white: #FFFFFF;
+    --color-offwhite: #F0F0F0;
+    --color-navblack: #11111122;
+    --color-testwhite: #FFFFFF66;
+    --color-gray: #AAAAAA33; 
+    --color-black: #101010;
+    --color-textblack: #303030;
 }
 
 @font-face {
     font-family: 'Nunito';
-    src: url('../assets/fonts/Nunito-Regular.ttf') format('truetype');
+    src: url('../assets/fonts/nunito/Nunito-Regular.eot');
+    src: url('../assets/fonts/nunito/Nunito-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/nunito/Nunito-Regular.woff2') format('woff2'),
+         url('../assets/fonts/nunito/Nunito-Regular.woff') format('woff'),
+         url('../assets/fonts/nunito/Nunito-Regular.ttf') format('truetype'),
+         url('../assets/fonts/nunito/Nunito-Regular.svg#Nunito-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
     font-family: 'Lora';
-    src: url('../assets/fonts/Lora-Regular.ttf') format('truetype');
+    src: url('../assets/fonts/lora/Lora-Regular.eot');
+    src: url('../assets/fonts/lora/Lora-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/lora/Lora-Regular.woff2') format('woff2'),
+         url('../assets/fonts/lora/Lora-Regular.woff') format('woff'),
+         url('../assets/fonts/lora/Lora-Regular.ttf') format('truetype'),
+         url('../assets/fonts/lora/Lora-Regular.svg#Lora-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 html, body {
@@ -24,27 +40,25 @@ html, body {
 }
 
 header {
-    display: flex;
     width: 100%;
-    top: 1vh;
-    text-align: center;
     position: fixed;
     z-index: 999;
-    color: #f1f1f1;
 }
 
 nav {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: relative;
-
-    background-color: #111111aa;
-    margin: auto;
+    height: 7.5vh;
+    background-color: var(--color-navblack);
+    text-shadow: #111;
+    /* position: relative; */
+    /* margin: auto; */
 }
 
 nav ul {
-    list-style-type: none;
+    /* list-style-type: none; */
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -56,17 +70,23 @@ nav li {
 
 nav a {
     display: block;
-    color: #f1f1f1; /* try: #FBFBFB */
+    color: var(--color-textblack);
     text-align: center;
+    -webkit-text-stroke-width: 0.7px;
+    /* padding: 1vw 1vw; */
     padding: 15px 15px;
     text-decoration: none;
     transition: background-color 0.75s ease;
+    cursor: pointer;
 }
 
 nav a:hover {
-    background-color: #85c2ff;     /* # f4acb7  87797A*/
+    font-weight:bold;
+    /* -webkit-text-stroke-color: #AAA; */
+    /* background-color: #85c2ff;   */
 }
 
+/* TODO */
 /* active navbar link */
 nav a.active {
     font-weight: bold;
@@ -76,6 +96,7 @@ nav a.active {
     font-weight: bold;
 }
 
+/* todo: underline for nav a*/
 /* navbar animation */
 nav::before {
     content: "";
@@ -83,10 +104,11 @@ nav::before {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 0;
-    height: 4px;
-    background-color: #42aaeb;
-    transition: width 0.6s ease-in;
+    width: 0vw;
+    height: 0.75vh;
+    background-color: #00000022;
+    /* transition: width 0.6s ease-in-out; */
+    transition: width 0.5s cubic-bezier(.5,0,.5,1);
 }
 
 nav:hover::before {
@@ -97,23 +119,28 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
-    background-color: #2424243b;
-    /* background: rgb(221,221,221);
-    background: radial-gradient(circle, rgba(221,221,221,1) 0%, rgba(141,177,221,1) 100%, rgba(148,187,233,1) 100%); */
+    /* background-color: var(--color-offwhite); */
+    /* background-color: #2424243b; */
+    /* background: linear-gradient(to bottom, #d7d2cc 0%, #a8a6a4 100%);} */
+    background-image: linear-gradient(to bottom, #ffffff, #e9e9e9, #d4d4d4, #bfbfbf, #aaaaaaaa);
 }
 
 main {
     margin: 0;
     padding: 0;
+    padding-top: 7.5vh;
+    gap: 5vh;
     /* ! */
     display: flex;
     flex-direction: column;
-    gap: 10vh; 
+    /* gap: 7.5vh; */
+    /* gap: 30vh; */
     justify-content: space-between;
+
 }
 
 section {
-    height: 100vh;
+    height: 75vh;
     width: 90vw;
     display: flex;
     flex-direction: column;
@@ -128,12 +155,17 @@ section {
 
 /* Sections: Welcome, Education, Contact */
 section:nth-child(even) {
-    background-color: #618abe81;
+    /* background-color: #618abedd; */
+    /* background-color: var(--color-navblack); */
+    background-color: #00000000;
 }
 
 /* Sections: Experience, Projects */
 section:nth-child(odd) {
-    background-color: #8bafdf81;
+    /* background-color: #8bafdf33; */
+    /* background-color: var(--color-gray); */
+    background-color: #00000000;
+
 }
 
 h1, h2, h3 {
@@ -179,10 +211,6 @@ footer {
 
 /* test */
 @media (max-width: 768px) {
-    /* body {
-        background-color: pink;
-    } */
-
     nav {
         display: inline-block;
         text-align: center;
