--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -1,21 +1,22 @@
 :root {
-    --color-white: #FFFFFF;
-    --color-offwhite: #F0F0F0;
-    --color-navblack: #11111122;
-    --color-testwhite: #FFFFFF66;
-    --color-gray: #AAAAAA33; 
+    --color-white: #f0f0f0;
     --color-black: #101010;
-    --color-textblack: #303030;
+    --color-gray: #3e3e3e;
+    --color-lightgray: #3e3e3e55;
+    --color-pink: #ff1759;
+    /* --color-white: #fdfffc; */
+    /* --color-pink: #ffc0cb; */
+    /* --color-red: #ff5e5b; */
 }
 
 @font-face {
     font-family: 'Nunito';
     src: url('../assets/fonts/nunito/Nunito-Regular.eot');
     src: url('../assets/fonts/nunito/Nunito-Regular.eot?#iefix') format('embedded-opentype'),
-         url('../assets/fonts/nunito/Nunito-Regular.woff2') format('woff2'),
-         url('../assets/fonts/nunito/Nunito-Regular.woff') format('woff'),
-         url('../assets/fonts/nunito/Nunito-Regular.ttf') format('truetype'),
-         url('../assets/fonts/nunito/Nunito-Regular.svg#Nunito-Regular') format('svg');
+        url('../assets/fonts/nunito/Nunito-Regular.woff2') format('woff2'),
+        url('../assets/fonts/nunito/Nunito-Regular.woff') format('woff'),
+        url('../assets/fonts/nunito/Nunito-Regular.ttf') format('truetype'),
+        url('../assets/fonts/nunito/Nunito-Regular.svg#Nunito-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -25,224 +26,316 @@
     font-family: 'Lora';
     src: url('../assets/fonts/lora/Lora-Regular.eot');
     src: url('../assets/fonts/lora/Lora-Regular.eot?#iefix') format('embedded-opentype'),
-         url('../assets/fonts/lora/Lora-Regular.woff2') format('woff2'),
-         url('../assets/fonts/lora/Lora-Regular.woff') format('woff'),
-         url('../assets/fonts/lora/Lora-Regular.ttf') format('truetype'),
-         url('../assets/fonts/lora/Lora-Regular.svg#Lora-Regular') format('svg');
+        url('../assets/fonts/lora/Lora-Regular.woff2') format('woff2'),
+        url('../assets/fonts/lora/Lora-Regular.woff') format('woff'),
+        url('../assets/fonts/lora/Lora-Regular.ttf') format('truetype'),
+        url('../assets/fonts/lora/Lora-Regular.svg#Lora-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
+body, p {
+    font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
 }
 
-header {
-    width: 100%;
-    position: fixed;
-    z-index: 999;
+h1, h2 {
+    font-family: 'Lora', Arial, Helvetica, sans-serif;
+    color: var(--color-black);
 }
 
-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 7.5vh;
-    background-color: var(--color-navblack);
-    text-shadow: #111;
-    /* position: relative; */
-    /* margin: auto; */
-}
-
-nav ul {
-    /* list-style-type: none; */
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-nav li {
-    display: inline-block;
-}
-
-nav a {
-    display: block;
-    color: var(--color-textblack);
+p {
+    font-size: 18px;
     text-align: center;
-    -webkit-text-stroke-width: 0.7px;
-    /* padding: 1vw 1vw; */
-    padding: 15px 15px;
-    text-decoration: none;
-    transition: background-color 0.75s ease;
-    cursor: pointer;
-}
-
-nav a:hover {
-    font-weight:bold;
-    /* -webkit-text-stroke-color: #AAA; */
-    /* background-color: #85c2ff;   */
-}
-
-/* TODO */
-/* active navbar link */
-nav a.active {
-    font-weight: bold;
-}
-
-.selected {
-    font-weight: bold;
-}
-
-/* todo: underline for nav a*/
-/* navbar animation */
-nav::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0vw;
-    height: 0.75vh;
-    background-color: #00000022;
-    /* transition: width 0.6s ease-in-out; */
-    transition: width 0.5s cubic-bezier(.5,0,.5,1);
-}
-
-nav:hover::before {
-    width: 100%;
+    color: var(--color-gray);
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
-    /* background-color: var(--color-offwhite); */
-    /* background-color: #2424243b; */
-    /* background: linear-gradient(to bottom, #d7d2cc 0%, #a8a6a4 100%);} */
-    background-image: linear-gradient(to bottom, #ffffff, #e9e9e9, #d4d4d4, #bfbfbf, #aaaaaaaa);
+    height: 100%;
 }
 
 main {
-    margin: 0;
-    padding: 0;
-    padding-top: 7.5vh;
-    gap: 5vh;
-    /* ! */
     display: flex;
     flex-direction: column;
-    /* gap: 7.5vh; */
-    /* gap: 30vh; */
-    justify-content: space-between;
-
+    gap: 20vh;
 }
 
 section {
+    display: flex;
+    text-align: center;
+    align-self: center;
+    justify-content: center;
+    z-index: 9999;
+    width: 100vw;
     height: 75vh;
-    width: 90vw;
+    /* border-left: 1px solid var(--color-gray);
+    border-right: 1px solid var(--color-gray); */
+    /* background-color: lightgray; */
+    /* background-color: var(--color-lightgray); */
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    top: 0;
+    left: 0;
+    margin-top: 5vh;
+    width: 100%;
+    background-color: transparent;
+}
+
+#scroll-nav {
+    display: flex;
+    /* align-items: center; */
+    gap: 50px;
+    font-size: 14px;
+    font-weight: bolder;
+    padding-left: 5%;
+}
+
+#scroll-nav a {
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    padding: 1em;
+    margin: -1em;
+    justify-content: center;
+    color: var(--color-black);
+}
+
+#link-nav {
+    justify-content: flex-end;
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    padding-right: 5%;
+}
+
+#link-nav div {
+    display: flex;
+    /* vertical-align: center; */
+    align-items: center;
+}
+
+#link-nav img {
+    vertical-align: middle;
+}
+
+nav a {
+    margin-left: 10px;
+    color: var(--color-black);
+    text-decoration: none;
+}
+
+.navbar-link {
+    transition: box-shadow 0.35s cubic-bezier(0.680, -0.550, 0.265, 1.550), transform 0.35s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+    /* transition: background-color 0.35s ease-in-out, transform 0.35s cubic-bezier(0.250, 0.460, 0.450, 0.940); */
+}
+
+
+.navbar-link:hover {
+    transform: translateX(-8px) translateY(8px);
+    box-shadow: 1px -1px var(--color-pink), 2px -2px var(--color-pink), 3px -3px var(--color-pink), 4px -4px var(--color-pink),
+        5px -5px var(--color-gray), 6px -6px var(--color-gray), 7px -7px var(--color-gray), 8px -8px var(--color-gray);
+    /* transform: translateY(-5px) translateX(-5px); */
+    /* box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e, 4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e, 8px -8px #3e3e3e; */
+}
+
+.navbar-link:not(:hover) {
+    transform: translateY(0) translateX(0);
+    text-shadow: none;
+}
+
+/* .welcome-header */
+.scale-in {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-animation: slide-in-bottom 1.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) 600ms both;
+    animation: slide-in-bottom 1.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) 600ms both;
+}
+
+.welcome-img {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-animation: slide-in-blurred-top 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 350ms both;
+    animation: slide-in-blurred-top 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 350ms both;
+    width: 300px;
+    height: 300px;
+}
+
+.welcome-text {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-animation: slide-in-bottom 1.1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 750ms both;
+    animation: slide-in-bottom 1.1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 750ms both;
+}
+
+h1, p {
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-top: 25px;
+    margin-bottom: 0;
+    /* margin: 25px auto; */
+}
+
+section#welcome {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    box-sizing: border-box;
-    margin: auto;
-    /* ! */
-    /* border-radius: 0.5%; */
+    margin-top: 0vh;
+    height: 80vh;
+    /* margin: auto; */
 }
 
-/* Sections: Welcome, Education, Contact */
-section:nth-child(even) {
-    /* background-color: #618abedd; */
-    /* background-color: var(--color-navblack); */
-    background-color: #00000000;
-}
-
-/* Sections: Experience, Projects */
-section:nth-child(odd) {
-    /* background-color: #8bafdf33; */
-    /* background-color: var(--color-gray); */
-    background-color: #00000000;
-
-}
-
-h1, h2, h3 {
-    font-family: 'Lora', Arial, Helvetica, sans-serif;
-}
-
-#welcome-text-fade {
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-}
-
-.fade-in {
-    opacity: 1;
+#welcome img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 25px;
-    background-color: #2320238f;
-    /* alt colors:  */
-    color: #fff;
+    gap: 5vw;
+    /* background-color: #2320235f; */
+    background-color: var(--color-lightgray);
     padding: 20px;
-    text-align: left;
+    color: var(--color-white);
+    /* padding: 5%; */
+    /* text-align: left; */
 }
 
-.footer-icon {
+.link-icon {
     width: 25px;
     height: 25px;
-    transition: transform 0.35s ease-in-out;
+    transition: transform 0.3s ease-in-out, filter 0.35s ease-in-out;
 }
 
-.footer-icon:hover {
-    transform: scale(1.5);
-    -webkit-transform: scale(1.5);
-    -moz-transform: scale(1.5);
-    -o-transform: scale(1.5);
-    -ms-transform: scale(1.5);
+.link-icon:hover {
+    transform: scale(1.75);
+    -webkit-transform: scale(1.75);
+    -moz-transform: scale(1.75);
+    -o-transform: scale(1.75);
+    -ms-transform: scale(1.75);
+    filter: invert(27%) sepia(90%) saturate(5383%) hue-rotate(333deg) brightness(102%) contrast(104%);
+    /* filter: var(--color-pink);
+    /* filter: invert(58%) sepia(53%) saturate(4258%) hue-rotate(325deg) brightness(101%) contrast(111%); */
 }
 
-/*** Media Queries ***/
-
-/* test */
-@media (max-width: 768px) {
-    nav {
-        display: inline-block;
-        text-align: center;
+@-webkit-keyframes slide-in-bottom {
+    0% {
+        visibility: visible;
+        -webkit-transform: translateY(125px);
+        transform: translateY(125px);
+        opacity: 0;
     }
 
-    nav a {
-        padding: 10px 8px;
-    }
-
-    nav a {
-        border-bottom: 2px solid transparent;
-    }
-
-    nav a:hover {
-        background-color: transparent;
-        border-bottom-color: #191919;
+    100% {
+        visibility: visible;
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
     }
 }
 
+@keyframes slide-in-bottom {
+    0% {
+        visibility: visible;
+        -webkit-transform: translateY(125px);
+        transform: translateY(125px);
+        opacity: 0;
+    }
 
-/* TODO */
-/* Desktop */
-@media screen and (min-width: 1024px) {}
+    100% {
+        visibility: visible;
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
 
-/* Tablet Portrait */
-@media screen and (min-width: 768px) and (max-width: 1024px) {}
+@-webkit-keyframes slide-in-blurred-top {
+    0% {
+        visibility: visible;
+        -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+        transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+        -webkit-transform-origin: 50% 0%;
+        transform-origin: 50% 0%;
+        -webkit-filter: blur(40px);
+        filter: blur(40px);
+        opacity: 0;
+    }
 
-/* Tablet Landscape */
-@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {}
+    100% {
+        visibility: visible;
+        -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+        transform: translateY(0) scaleY(1) scaleX(1);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-filter: blur(0);
+        filter: blur(0);
+        opacity: 1;
+    }
+}
 
-/* Mobile Portrait */
-@media screen and (max-width: 480px) {}
+@keyframes slide-in-blurred-top {
+    0% {
+        visibility: visible;
+        -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+        transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+        -webkit-transform-origin: 50% 0%;
+        transform-origin: 50% 0%;
+        -webkit-filter: blur(40px);
+        filter: blur(40px);
+        opacity: 0;
+    }
 
-/* Mobile Landscape*/
-@media screen and (max-width: 640px) and (orientation: landscape) {}
+    100% {
+        visibility: visible;
+        -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+        transform: translateY(0) scaleY(1) scaleX(1);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-filter: blur(0);
+        filter: blur(0);
+        opacity: 1;
+    }
+}
+
+/* @-webkit-keyframes scale-in-center {
+    0% {
+        visibility: visible;
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100% {
+        visibility: visible;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes scale-in-center {
+    0% {
+        visibility: visible;
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100% {
+        visibility: visible;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+} */
