--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -1,12 +1,15 @@
 :root {
-    --color-white: #f0f0f0;
+    --color-white: #fefefe;
     --color-black: #101010;
     --color-gray: #3e3e3e;
     --color-lightgray: #3e3e3e55;
-    --color-pink: #ff1759;
-    /* --color-white: #fdfffc; */
-    /* --color-pink: #ffc0cb; */
-    /* --color-red: #ff5e5b; */
+    --color-pink: #ff015e;
+    /* ff1759 fe347e */
+
+
+    /* --color-white: #fafafa; */
+    /* --color-pink: #ff007f; */
+    /* --color-pink: #fe347e; */
 }
 
 @font-face {
@@ -35,7 +38,7 @@
     font-display: swap;
 }
 
-body, p {
+body {
     font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
 }
 
@@ -45,7 +48,8 @@ h1, h2 {
 }
 
 p {
-    font-size: 18px;
+    font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
+    font-size: 22px;
     text-align: center;
     color: var(--color-gray);
 }
@@ -54,6 +58,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: var(--color-white);
 }
 
 main {
@@ -70,10 +75,9 @@ section {
     z-index: 9999;
     width: 100vw;
     height: 75vh;
+    background-color: transparent;
     /* border-left: 1px solid var(--color-gray);
     border-right: 1px solid var(--color-gray); */
-    /* background-color: lightgray; */
-    /* background-color: var(--color-lightgray); */
 }
 
 header {
@@ -85,14 +89,17 @@ header {
     left: 0;
     margin-top: 5vh;
     width: 100%;
-    background-color: transparent;
+    background-color: var(--color-white);
 }
 
 #scroll-nav {
     display: flex;
+    justify-content: flex-start;
     /* align-items: center; */
-    gap: 50px;
-    font-size: 14px;
+    /* gap: 50px; */
+    width: 50%;
+    gap: 4rem;
+    font-size: 18px;
     font-weight: bolder;
     padding-left: 5%;
 }
@@ -100,7 +107,6 @@ header {
 #scroll-nav a {
     display: inline-block;
     position: relative;
-    z-index: 1;
     padding: 1em;
     margin: -1em;
     justify-content: center;
@@ -111,14 +117,17 @@ header {
     justify-content: flex-end;
     display: flex;
     align-items: center;
-    gap: 50px;
+    /* gap: 50px; */
+    width: 50%;
+    gap: 4rem;
     padding-right: 5%;
 }
 
 #link-nav div {
     display: flex;
-    /* vertical-align: center; */
     align-items: center;
+    /* vertical-align: center; */
+
 }
 
 #link-nav img {
@@ -152,29 +161,30 @@ nav a {
 
 /* .welcome-header */
 .scale-in {
-    opacity: 0;
-    visibility: hidden;
+    /* opacity: 0; */
+    /* visibility: hidden; */
     -webkit-animation: slide-in-bottom 1.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) 600ms both;
     animation: slide-in-bottom 1.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) 600ms both;
 }
 
-.welcome-img {
-    opacity: 0;
-    visibility: hidden;
-    -webkit-animation: slide-in-blurred-top 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 350ms both;
-    animation: slide-in-blurred-top 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 350ms both;
+#landing-img {
+    /* opacity: 0; */
+    /* visibility: hidden; */
     width: 300px;
     height: 300px;
+    -webkit-animation: slide-in-blurred-top 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 350ms both;
+    animation: slide-in-blurred-top 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 350ms both;
 }
 
-.welcome-text {
-    opacity: 0;
-    visibility: hidden;
+#landing-text {
+    /* opacity: 0; */
+    /* visibility: hidden; */
+    font-size: 28px;
     -webkit-animation: slide-in-bottom 1.1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 750ms both;
     animation: slide-in-bottom 1.1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 750ms both;
 }
 
-h1, p {
+#welcome h1, #welcome p {
     padding-left: 100px;
     padding-right: 100px;
     margin-top: 25px;
@@ -182,7 +192,7 @@ h1, p {
     /* margin: 25px auto; */
 }
 
-section#welcome {
+#welcome {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -203,17 +213,16 @@ footer {
     flex-direction: row;
     justify-content: center;
     gap: 5vw;
-    /* background-color: #2320235f; */
+    padding: 1%;
     background-color: var(--color-lightgray);
-    padding: 20px;
     color: var(--color-white);
-    /* padding: 5%; */
+    /* padding: 20px; */
     /* text-align: left; */
 }
 
 .link-icon {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     transition: transform 0.3s ease-in-out, filter 0.35s ease-in-out;
 }
 
@@ -223,8 +232,8 @@ footer {
     -moz-transform: scale(1.75);
     -o-transform: scale(1.75);
     -ms-transform: scale(1.75);
-    filter: invert(27%) sepia(90%) saturate(5383%) hue-rotate(333deg) brightness(102%) contrast(104%);
-    /* filter: var(--color-pink);
+    filter: invert(24%) sepia(91%) saturate(6458%) hue-rotate(330deg) brightness(98%) contrast(112%);
+    /* filter: invert(27%) sepia(90%) saturate(5383%) hue-rotate(333deg) brightness(102%) contrast(104%); */
     /* filter: invert(58%) sepia(53%) saturate(4258%) hue-rotate(325deg) brightness(101%) contrast(111%); */
 }
 
@@ -262,7 +271,7 @@ footer {
 
 @-webkit-keyframes slide-in-blurred-top {
     0% {
-        visibility: visible;
+        /* visibility: visible; */
         -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
         transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
         -webkit-transform-origin: 50% 0%;
@@ -307,35 +316,3 @@ footer {
         opacity: 1;
     }
 }
-
-/* @-webkit-keyframes scale-in-center {
-    0% {
-        visibility: visible;
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 0;
-    }
-
-    100% {
-        visibility: visible;
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-@keyframes scale-in-center {
-    0% {
-        visibility: visible;
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 0;
-    }
-
-    100% {
-        visibility: visible;
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
-    }
-} */
