--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -3,13 +3,9 @@
     --color-black: #101010;
     --color-gray: #3e3e3e;
     --color-lightgray: #3e3e3e55;
-    --color-pink: #ff015e;
-    /* ff1759 fe347e */
-
-
-    /* --color-white: #fafafa; */
-    /* --color-pink: #ff007f; */
-    /* --color-pink: #fe347e; */
+    --color-pink: #ff059f;
+    /* --color-pink: #ff015e; */
+    /* --color-pink: #ff1a6e; */
 }
 
 @font-face {
@@ -40,6 +36,10 @@
 
 body {
     font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
+    text-size-adjust: auto;
+    -webkit-text-size-adjust: auto;
+    -ms-text-size-adjust: auto;
+    -moz-text-size-adjust: auto;
 }
 
 h1, h2 {
@@ -57,7 +57,6 @@ p {
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
     background-color: var(--color-white);
 }
 
@@ -76,56 +75,63 @@ section {
     width: 100vw;
     height: 75vh;
     background-color: transparent;
-    /* border-left: 1px solid var(--color-gray);
-    border-right: 1px solid var(--color-gray); */
 }
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     position: relative;
     top: 0;
     left: 0;
     margin-top: 5vh;
-    width: 100%;
+    width: 100vw;
     background-color: var(--color-white);
 }
 
 #scroll-nav {
     display: flex;
     justify-content: flex-start;
-    /* align-items: center; */
+    width: 50vw;
     /* gap: 50px; */
-    width: 50%;
     gap: 4rem;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bolder;
-    padding-left: 5%;
+    /* padding-left: 5%; */
+    padding-left: 5vw;
+    /* background-color: transparent; */
+    /* align-items: center; */
 }
 
 #scroll-nav a {
     display: inline-block;
     position: relative;
-    padding: 1em;
-    margin: -1em;
+    /* padding: 1em;
+    margin: -1em; */
+    padding: 1rem;
+    margin: -1rem;
     justify-content: center;
     color: var(--color-black);
+    background-color: transparent;
+    /* font-size: 1.5rem; */
 }
 
 #link-nav {
     justify-content: flex-end;
     display: flex;
     align-items: center;
+    width: 50vw;
     /* gap: 50px; */
-    width: 50%;
-    gap: 4rem;
-    padding-right: 5%;
+    /* gap: 5rem; */
+    gap: 7rem;
+    padding-right: 5vw; /* 5% */
+    /* background-color: transparent; */
 }
 
 #link-nav div {
     display: flex;
     align-items: center;
+    background-color: transparent;
     /* vertical-align: center; */
 
 }
@@ -142,15 +148,14 @@ nav a {
 
 .navbar-link {
     transition: box-shadow 0.35s cubic-bezier(0.680, -0.550, 0.265, 1.550), transform 0.35s cubic-bezier(0.250, 0.460, 0.450, 0.940);
-    /* transition: background-color 0.35s ease-in-out, transform 0.35s cubic-bezier(0.250, 0.460, 0.450, 0.940); */
 }
 
 
-.navbar-link:hover {
+.navbar-link:hover, .navbar-link:active {
     transform: translateX(-8px) translateY(8px);
     box-shadow: 1px -1px var(--color-pink), 2px -2px var(--color-pink), 3px -3px var(--color-pink), 4px -4px var(--color-pink),
-        5px -5px var(--color-gray), 6px -6px var(--color-gray), 7px -7px var(--color-gray), 8px -8px var(--color-gray);
-    /* transform: translateY(-5px) translateX(-5px); */
+                5px -5px var(--color-pink), 6px -6px var(--color-pink), 7px -7px var(--color-gray), 8px -8px var(--color-gray),
+                9px -9px var(--color-gray), 10px -10px var(--color-gray), 11px -11px var(--color-gray), 12px -12px var(--color-gray);
     /* box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e, 4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e, 8px -8px #3e3e3e; */
 }
 
@@ -221,32 +226,31 @@ footer {
 }
 
 .link-icon {
-    width: 35px;
-    height: 35px;
-    transition: transform 0.3s ease-in-out, filter 0.35s ease-in-out;
+    height: 200%;
+    width: 200%;
+    --animation-time: 0.35s;
+    --movement-curve: cubic-bezier(0.680, -0.550, 0.265, 1.550);
+    --movement-curve2: ease-in-out;
+    transition: transform var(--animation-time) var(--movement-curve), filter var(--animation-time) var(--movement-curve2);
 }
 
-.link-icon:hover {
+.link-icon:hover, .link-icon:active {
     transform: scale(1.75);
     -webkit-transform: scale(1.75);
     -moz-transform: scale(1.75);
     -o-transform: scale(1.75);
     -ms-transform: scale(1.75);
-    filter: invert(24%) sepia(91%) saturate(6458%) hue-rotate(330deg) brightness(98%) contrast(112%);
-    /* filter: invert(27%) sepia(90%) saturate(5383%) hue-rotate(333deg) brightness(102%) contrast(104%); */
-    /* filter: invert(58%) sepia(53%) saturate(4258%) hue-rotate(325deg) brightness(101%) contrast(111%); */
+    filter: brightness(0) saturate(100%) invert(17%) sepia(90%) saturate(6750%) hue-rotate(315deg) brightness(105%) contrast(101%);
 }
 
 @-webkit-keyframes slide-in-bottom {
     0% {
-        visibility: visible;
+        opacity: 0;
         -webkit-transform: translateY(125px);
         transform: translateY(125px);
-        opacity: 0;
     }
 
     100% {
-        visibility: visible;
         -webkit-transform: translateY(0);
         transform: translateY(0);
         opacity: 1;
@@ -255,14 +259,12 @@ footer {
 
 @keyframes slide-in-bottom {
     0% {
-        visibility: visible;
+        opacity: 0;
         -webkit-transform: translateY(125px);
         transform: translateY(125px);
-        opacity: 0;
     }
 
     100% {
-        visibility: visible;
         -webkit-transform: translateY(0);
         transform: translateY(0);
         opacity: 1;
@@ -271,18 +273,16 @@ footer {
 
 @-webkit-keyframes slide-in-blurred-top {
     0% {
-        /* visibility: visible; */
+        opacity: 0;
         -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
         transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
         -webkit-transform-origin: 50% 0%;
         transform-origin: 50% 0%;
         -webkit-filter: blur(40px);
         filter: blur(40px);
-        opacity: 0;
     }
 
     100% {
-        visibility: visible;
         -webkit-transform: translateY(0) scaleY(1) scaleX(1);
         transform: translateY(0) scaleY(1) scaleX(1);
         -webkit-transform-origin: 50% 50%;
@@ -295,18 +295,16 @@ footer {
 
 @keyframes slide-in-blurred-top {
     0% {
-        visibility: visible;
+        opacity: 0;
         -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
         transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
         -webkit-transform-origin: 50% 0%;
         transform-origin: 50% 0%;
         -webkit-filter: blur(40px);
         filter: blur(40px);
-        opacity: 0;
     }
 
     100% {
-        visibility: visible;
         -webkit-transform: translateY(0) scaleY(1) scaleX(1);
         transform: translateY(0) scaleY(1) scaleX(1);
         -webkit-transform-origin: 50% 50%;
@@ -315,4 +313,56 @@ footer {
         filter: blur(0);
         opacity: 1;
     }
+}
+
+/* Desktop */
+@media screen and (min-width: 1024px) {
+
+
+}
+
+/* Tablet Portrait */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    #landing-img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+}
+
+/* Tablet Landscape */
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    #landing-img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+
+}
+
+/* Mobile Portrait */
+@media screen and (max-width: 480px) {
+    #welcome #landing-img {
+        /* max-width: 25vw;
+        max-height: 25vh; */
+        scale: 0.5;
+    }
+
+    #welcome #welcome-header {
+        font-size: 12px;
+    }
+    #welcome p {
+        font-size: 14px;
+    }
+
+
+}
+
+/* Mobile Landscape*/
+@media screen and (max-width: 640px) and (orientation: landscape) {
+    #landing-img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
 }
