--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -119,6 +119,7 @@ body {
 
 h1, h2 {
     font-family: 'Lora', Arial, Helvetica, sans-serif;
+    font-size: 2rem;
     color: var(--color-black);
 }
 
@@ -204,6 +205,7 @@ main {
 
 section {
     display: flex;
+    flex-direction: column;
     align-self: center;
     justify-content: center;
     text-align: center;
@@ -283,7 +285,7 @@ footer a {
 }
 
 #landing-header {
-    font-size: 2.5rem;
+    font-size: 3rem;
     -webkit-animation: slide-in-bottom 1.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) 600ms both;
     animation: slide-in-bottom 1.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) 600ms both;
 }
@@ -628,16 +630,16 @@ footer .link-icon {
 /* @media screen and (max-width: 640px) and (orientation: landscape) {} */
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {}
+/* @media only screen and (max-width: 600px) {} */
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+/* @media only screen and (min-width: 600px) {} */
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
+/* @media only screen and (min-width: 768px) {} */
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
+/* @media only screen and (min-width: 992px) {} */
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+/* @media only screen and (min-width: 1200px) {} */
