--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -64,16 +64,31 @@
 @keyframes slide-in-top {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(-1000px);
-        transform: translateY(-1000px);
+        -webkit-transform: translateY(-250px);
+        transform: translateY(-250px);
     }
-
+    75% {
+        opacity: 1;
+    }
     100% {
         -webkit-transform: translateY(0);
         transform: translateY(0);
         opacity: 1;
     }
 }
+
+/* @keyframes slide-in-top {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+} */
 
 @font-face {
     font-family: 'Nunito';
