--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -148,7 +148,7 @@ div.split-submit input[type="button"] {
 
 /* move this !!! */
 section {
-    max-width: 90vw;
+    /* max-width: 90vw; */
     border-left: 3px solid #3d3b3055;
     border-right: 3px solid #3d3b3055;
 }
